# skin-lesion-classifier

./: .gitignore  CLAUDE.md  README.md  app.py  dataset.py  evaluate.py  gradcam.py  model.py  pyproject.toml  requirements.txt  train.py  transforms.py
docs/: splits.md
notebooks/: kaggle_training.ipynb
scripts/: download_data.ps1  download_data.sh  make_splits.py  sanity_check.py  smoke_test.py
splits/: _meta.json  test.csv  train.csv  val.csv
