[project]
name = "skin-lesion-classifier"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "grad-cam>=1.5.5",
    "gradio>=6.14.0",
    "huggingface-hub>=1.13.0",
    "matplotlib>=3.10.9",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
